# shpd-seed-seeker

./: .firebaserc  .gitignore  Cargo.toml  NOTICE  README.md  firebase.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
crates/seedfinder-cli/: Cargo.toml
crates/seedfinder-cli/src/: main.rs  query_file.rs
crates/seedfinder-core/: Cargo.toml
crates/seedfinder-core/src/: batch.rs  builder.rs  catalog.rs  caves_floor.rs  caves_mobs.rs  caves_rooms.rs  challenges.rs  city_boss_shop.rs  city_floor.rs  city_mobs.rs  city_rooms.rs  equipment.rs  feasibility.rs  generator.rs  geometry.rs  halls_floor.rs  halls_mobs.rs  halls_rooms.rs  java_math.rs  json_query.rs  level.rs  level_flags.rs  level_prelude.rs  lib.rs  main_world.rs  maze.rs  mobs.rs  model.rs  painter.rs  prison_floor.rs  prison_mobs.rs  prison_rooms.rs  probability.rs  query.rs  quest_rooms.rs  quests.rs  regular_items.rs  regular_level.rs  regular_placement.rs  rng.rs  (+14 more)
crates/seedfinder-ffi/: Cargo.toml
crates/seedfinder-ffi/include/: seedfinder.h
crates/seedfinder-ffi/src/: lib.rs
crates/seedfinder-jni/: Cargo.toml
crates/seedfinder-jni/src/: lib.rs
crates/seedfinder-session/: Cargo.toml
crates/seedfinder-session/src/: lib.rs
crates/seedfinder-wasm/: Cargo.toml
crates/seedfinder-wasm/src/: lib.rs
docs/: COMPATIBILITY.md
linux/: AppRun  Cargo.toml  README.md  build.rs
linux/data/: dev.seedseeker.SeedSeeker.desktop  dev.seedseeker.SeedSeeker.metainfo.xml
linux/resources/: resources.gresource.xml
linux/resources/style/: style.css
linux/src/: application.rs  challenges_dialog.rs  config.rs  detail_pane.rs  format.rs  main.rs  persist.rs  presets.rs  presets_dialog.rs  query_pane.rs  requirement_editor.rs  results_pane.rs  scout_match.rs  scout_page.rs  search_page.rs  seed_list.rs  state.rs  update.rs  window.rs
macos/: README.md
macos/SeedSeeker/: Info.plist  LINKING.md  Package.resolved  Package.swift
macos/SeedSeeker/Resources/: AppIcon.icns
macos/SeedSeeker/Sources/CSeedFinder/: shim.c
macos/SeedSeeker/Sources/SeedSeeker/: SeedSeekerApp.swift
macos/SeedSeeker/Sources/SeedSeekerKit/: Catalog.swift  Engine.swift  Models.swift  Persistence.swift  SearchController.swift  SeedList.swift  UpdateChecker.swift  WireCodecs.swift
macos/SeedSeeker/Tests/SeedSeekerKitTests/: ImpossibleQueryTests.swift  SeedExplorerTests.swift  SeedSeekerKitTests.swift  UpdateCheckerTests.swift
macos/dmg/: background.tiff  settings.py
pgo/: seed-seeker.profdata
scripts/: build-android-native.sh  build-linux-appimage.sh  build-linux-gtk-stack.sh  build-macos-app.sh  build-macos-native.sh  build-web-wasm.sh  build-windows-app.ps1  generate-icons.sh  generate-sprite-bounds.py  package-macos-dmg.sh
tooling/oracle/: README.md  build.sh  run.sh
tooling/oracle/patches/: v3.3.8-oracle.patch
tooling/oracle/tests/: aaa-aaa-aaa-floor1.expected.json  assert_boss_skips.py  assert_caves.py  assert_challenges.py  assert_city.py  assert_halls.py  assert_imp_transmutation.py  assert_prison.py  assert_smoke.py  boss-skips.expected.json  boss-skips.sh  caves-floors.expected.json  caves.sh  challenges.expected.json  challenges.sh  city-floors.expected.json  city.sh  halls-floors.expected.json  halls.sh  imp-transmutation.expected.json  imp-transmutation.sh  prison-floors.expected.json  prison.sh  smoke.sh
tooling/parity/: CavesMobPlacementOracle.java  CavesMobsOracle.java  CavesRoomPaintOracle.java  CityRoomPaintOracle.java  EquipmentOracle.java  HallsMobPlacementOracle.java  HallsMobsOracle.java  HallsRoomPaintOracle.java  LevelPreludeOracle.java  MobRotationOracle.java  PrisonMobPlacementOracle.java  PrisonMobsOracle.java  PrisonRoomPaintOracle.java  QuestOracle.java  QuestRoomPaintOracle.java  RegularItemsOracle.java  RegularPlacementOracle.java  RngOracle.java  SecretRoomsOracle.java  SewerRoomPaintOracle.java  ShopOracle.java  SpecialConsumableOracle.java  SpecialEquipmentOracle.java  SpecialForcedOracle.java
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/scripts/: create-favicon.mjs
web/src/: app.tsx  main.tsx  styles.css
web/src/components/: Challenges.tsx  FloorSlider.tsx  ItemSprite.tsx  QueryPanel.tsx  RequirementDialog.tsx  SearchResults.tsx  requirement-dialog.test.tsx
web/src/designs/one/: App.tsx  DownloadMenu.tsx  QueryPanel.tsx  RequirementEditor.tsx  ResultsPanel.tsx  ScoutPanel.tsx  parts.tsx  styles.css  summary.ts
web/src/designs/two/: App.tsx  FindView.tsx  RequirementCard.tsx  ScoutView.tsx  Sprite.tsx  controls.tsx  hooks.ts  styles.css
web/src/lib/: catalog.ts  format.ts  glow.ts  icons.tsx  query-serialization.test.ts  query.ts  region.test.ts  region.ts  seed-input.test.ts  sprites.test.ts  sprites.ts  store.ts  validation.test.ts
web/src/lib/search/: coordinator-state.test.ts  coordinator-state.ts  (+5 more)
web/src/test/: setup.ts
windows/: README.md  SeedSeeker.slnx
windows/SeedSeeker/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  NativeEngine.cs  SeedSeeker.csproj  UpdateChecker.cs  app.manifest
(+39 files in other folders)
