[workspace]
members = [
    "crates/seedfinder-cli",
    "crates/seedfinder-core",
    "crates/seedfinder-session",
    "crates/seedfinder-wasm",
    "crates/seedfinder-jni",
    "crates/seedfinder-ffi",
    "linux",
]
resolver = "3"

[workspace.package]
version = "0.5.4"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
