[package]
name = "shpd-seedfinder-gtk"
description = "Native GTK and libadwaita frontend for Seed Seeker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.97"
publish = false

# "seed-seeker" is taken by the CLI binary in the shared workspace target directory.
[[bin]]
name = "seed-seeker-gtk"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9.2", features = ["gtk_v4_22", "v1_9"] }
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_22"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shpd-seedfinder-core = { path = "../crates/seedfinder-core" }
shpd-seedfinder-session = { path = "../crates/seedfinder-session" }

[build-dependencies]
glib-build-tools = "0.22.8"

[lints]
workspace = true
