[package]
name = "shpd-seedfinder-ffi"
description = "C ABI for Apple Seed Seeker frontends"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "shpd_seedfinder_ffi"
crate-type = ["staticlib", "rlib"]

[dependencies]
shpd-seedfinder-session = { path = "../seedfinder-session" }

[lints]
workspace = true
