[package]
name = "shpd-seedfinder-jni"
description = "Coarse-grained Android JNI bridge for Seed Seeker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "shpd_seedfinder"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = { version = "0.21.1", default-features = false }
shpd-seedfinder-core = { path = "../seedfinder-core" }

[lints]
workspace = true

