[package]
name = "shpd-seedfinder-wasm"
description = "Browser WebAssembly adapter for the Shattered Pixel Dungeon seed finder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "shpd_seedfinder_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shpd-seedfinder-core = { path = "../seedfinder-core", features = ["json-query"] }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
